# RDAS

./: .gitignore  .gitmodules  AlertCypher.py  LICENSE  MODEL_INSTALLATION.md  README.md  alert-requirements.txt  alert_add_epi.py  alert_env.yaml  annotation_dedup.py  approve_dump.py  config.ini  copy_to_cluster.py  detect_approval.py  detect_transfer.py  driver_automatic.py  driver_manual.py  environment.yml  environment_setup.py  epi-requirements.txt  et --hard HEAD~2  file_transfer.py  fix_evidence_property.py  generate_dump.py  init_all_db_nodes.py  initial_loading.py  installing_neo4j_and_running_scripts.md  investigatoradd.py  invoke-esearch.py  invoke-esearch2.py  invoke-esearch3.py  load-pubtype.py  load-substance.prof  load-substance.py  migrate_neo4j_dump.py  nohup.out  pipeline.md  remote_dump_and_transfer.py  removethis.py  requirements.txt  (+14 more)
A_GARD/: 1_GARD_to_db_and_csv.py  2_generate_short_names_list.py  init_GARD_all.py
B_clinical_trial/: cypher_helpers.py  init_1_clinical_trial_step_1.py  init_1_clinical_trial_step_2.py  init_1_clinical_trial_step_2Dot5.py  init_1dot5_clinical_trial_step_1.py  init_2_clinical_trial_step_2.py  init_3_clinical_trial_step_3.py  init_4_clinical_trial_step_4_drug.py  init_4_clinical_trial_step_4_followup_drug.py  init_5_clinical_trial_retrieve_pmids_umlti.py  init_6_clinical_trial_pmids_not_in_Article_umlti.py  init_7_clinical_trial_pmids_not_in_Article_table_pubtator_multi.py  init_ClinicalTrail_all.py  (+2 more)
old/neo4j_access/: setup.cfg
old/neo4j_access/src/ncats_alert_neo4j.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+963 files in other folders)
