[metadata]
name = ncats_alert_neo4j
version = 0.0.1
author = Example Author
author_email = author@example.com
description = backend access for alert related Neo4j database
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ncats/alert
project_urls =
    Bug Tracker = https://github.com/ncats/alert/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src